--- a/contact.html
+++ b/contact.html
@@ -13,18 +13,14 @@ order: 3
 <div class="row">
 	<div class="col-sm-6 col-lg-3">
 		<h3>Address</h3>
-		10 Downing Street,<br />
-		Westminster,<br />
-		London,<br />
-		SW1A 2AA
-	</div>
-	<div class="col-sm-6 col-lg-3">
-		<h3>Phone</h3>
-		<a href="tel:02079460123">020 7946 0123</a>
+		2110 Speedway,<br />
+		Austin,<br />
+		Texas,<br />
+		78705
 	</div>
 	<div class="col-sm-6 col-lg-3">
 		<h3>Email</h3>
-		<a href="mailto:info@brandname.com">info@brandname.com</a>
+		<a href="crosson.a.michael@gmail.com">crosson.a.michael at gmail.com</a>
 	</div>
 	<div class="col-sm-6 col-lg-3">
 		<h3>Socials</h3>
