--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@ layout: default
 title: Welcome
 ---
 
-<p class="text-center">Hello world! Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-	sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+<p class="text-center">Hello! Welcome to my website. Hope you enjoy your stay!
 </p>
 
 <div id="carouselCaptions" class="carousel slide" data-bs-ride="carousel">
