--- a/about.html
+++ b/about.html
@@ -7,35 +7,26 @@ order: 1
 
 <div class="col-lg-8 center">
 	<h3>Who</h3>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at arcu eu massa ornare facilisis ac
-		eget nulla. Integer eget dolor semper, ornare mi eu, bibendum felis. Mauris tempus arcu eget nunc rutrum
-		iaculis. Fusce congue sodales nunc vitae mattis. Morbi.
+	<p>Michael 
 	</p>
 
 	<h3>What</h3>
-	<p>Nunc nec odio nisi. Duis dui magna, dapibus vitae diam at, pellentesque commodo eros. Nam sodales
-		scelerisque purus, ut efficitur enim sollicitudin sed. Orci varius natoque penatibus et magnis dis
-		parturient montes, nascetur ridiculus mus. Sed pulvinar sem a consequat pellentesque.
+	<p>Tech
 	</p>
 
 	<h3>When</h3>
-	<p>Etiam quis turpis finibus, convallis mi quis, hendrerit ligula. Morbi pharetra vulputate turpis, sit
-		amet laoreet ante volutpat at. Phasellus ipsum justo, maximus ut enim ullamcorper, ornare finibus augue.
-		Vivamus non arcu malesuada, rutrum metus id, consequat mi.
+	<p>Right Now!
 	</p>
 
 	<h3>Where</h3>
-	<p>Sed tellus nibh, imperdiet vitae magna at, tincidunt gravida nisl. Nullam condimentum est vel placerat
-		pretium. Sed dictum aliquet velit.
+	<p>Seattle or Austin
 	</p>
 
 	<h3>Why</h3>
-	<p>Integer quis tellus faucibus, elementum mauris et, interdum sapien. Nullam suscipit quis dui vitae
-		blandit. Sed ullamcorper sem sed urna dapibus, eu tincidunt eros venenatis.
+	<p>Solving interesting problems with cool people is fun!
 	</p>
 
 	<h3>How</h3>
-	<p>Praesent suscipit risus sit amet nulla tincidunt, sit amet pellentesque massa rhoncus. Donec
-		consequat est ipsum, aliquam congue orci dictum et. Vestibulum volutpat elementum tincidunt.
+	<p>Innovation, Analytics, and building tools
 	</p>
 </div>
