--- a/contact.html
+++ b/contact.html
@@ -6,18 +6,16 @@ order: 3
 ---
 
 <iframe
-	src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJRxzRQcUEdkgRGVaKyzmkgvg&key=AIzaSyBkT6JeL7nRXJmMLdaeo1IMiLAzpdqw16g"
+	src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJ-bfVTh8VkFQRDZLQnmioK9s"
+	allowfullscreen>
+</iframe>
+
+<iframe
+	src="https://www.google.com/maps/embed/v1/ChIJZe22kZq1RIYR4Ed2g630JxE"
 	allowfullscreen>
 </iframe>
 
 <div class="row">
-	<div class="col-sm-6 col-lg-3">
-		<h3>Address</h3>
-		2110 Speedway,<br />
-		Austin,<br />
-		Texas,<br />
-		78705
-	</div>
 	<div class="col-sm-6 col-lg-3">
 		<h3>Email</h3>
 		<a href="crosson.a.michael@gmail.com">crosson.a.michael at gmail.com</a>
