--- a/contact.html
+++ b/contact.html
@@ -5,24 +5,13 @@ type: navigation
 order: 3
 ---
 
-<iframe
-	src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJ-bfVTh8VkFQRDZLQnmioK9s"
-	allowfullscreen>
-</iframe>
-
-<iframe
-	src="https://www.google.com/maps/embed/v1/ChIJZe22kZq1RIYR4Ed2g630JxE"
-	allowfullscreen>
-</iframe>
-
-<div class="row">
-	<div class="col-sm-6 col-lg-3">
-		<h3>Email</h3>
-		<a href="crosson.a.michael@gmail.com">crosson.a.michael at gmail.com</a>
-	</div>
-	<div class="col-sm-6 col-lg-3">
-		<h3>Socials</h3>
-
-		{% include socials.html %}
-	</div>
+<div class="row justify-content-center text-center">
+    <div class="col-sm-6 col-lg-3 mb-4">
+        <h3>Email</h3>
+        <a href="mailto:crosson.a.michael@gmail.com">crosson.a.michael@gmail.com</a>
+    </div>
+    <div class="col-sm-6 col-lg-3 mb-4">
+        <h3>Socials</h3>
+        {% include socials.html %}
+    </div>
 </div>
