--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,9 @@ order: 3
         <h3>Email</h3>
         <a href="mailto:crosson.a.michael@gmail.com">crosson.a.michael@gmail.com</a>
     </div>
+	<div>
+		
+	</div>
     <div class="col-sm-6 col-lg-3 mb-4">
         <h3>Socials</h3>
         {% include socials.html %}
