--- a/index.html
+++ b/index.html
@@ -3,36 +3,56 @@ layout: default
 title: Welcome
 ---
 
-<p class="text-center">Hello! Welcome to my website. Hope you enjoy your stay!
+<p class="text-center">Hello! Welcome to my website. Below are some pictures of cool things and fun times. Feel free to explore and I hope you enjoy your stay!
 </p>
 
 <div id="carouselCaptions" class="carousel slide" data-bs-ride="carousel">
-	<ol class="carousel-indicators">
-		{% for i in site.data.carousel.carousel_slides %}
-		<li data-bs-target="#carouselCaptions" data-bs-slide-to="{{ forloop.index | minus: 1 }}"
-			class="{% if forloop.index == 1 %}active{% endif %}">
-		</li>
-		{% endfor %}
-	</ol>
-	<div class="carousel-inner">
-		{% for i in site.data.carousel.carousel_slides %}
-		<div class="carousel-item {% if forloop.index == 1 %}active{% endif %}">
-			<img class="d-block w-100" src="static/img/carousel/{{i.img}}" alt="{{ i.label }}">
-			<div class="carousel-caption d-none d-md-block">
-				<h5>{{ i.label }}</h5>
-				<p>{{ i.caption }}</p>
-			</div>
-		</div>
-		{% endfor %}
-	</div>
-	<a class="carousel-control-prev" href="#carouselCaptions" role="button" data-bs-slide="prev" title="Previous">
-		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-		<span class="visually-hidden">Previous</span>
-	</a>
-	<a class="carousel-control-next" href="#carouselCaptions" role="button" data-bs-slide="next" title="Next">
-		<span class="carousel-control-next-icon" aria-hidden="true"></span>
-		<span class="visually-hidden">Next</span>
-	</a>
+    <ol class="carousel-indicators">
+        {% for i in site.data.carousel.carousel_slides %}
+        <li data-bs-target="#carouselCaptions" data-bs-slide-to="{{ forloop.index | minus: 1 }}"
+            class="{% if forloop.index == 1 %}active{% endif %}">
+        </li>
+        {% endfor %}
+    </ol>
+    <div class="carousel-inner">
+        {% for i in site.data.carousel.carousel_slides %}
+        <div class="carousel-item {% if forloop.index == 1 %}active{% endif %}">
+            <div class="carousel-image-wrapper">
+                <img class="d-block w-100 carousel-image" src="static/img/carousel/{{i.img}}" alt="{{ i.label }}">
+            </div>
+            <div class="carousel-caption d-none d-md-block">
+                <h5>{{ i.label }}</h5>
+                <p>{{ i.caption }}</p>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+    <a class="carousel-control-prev" href="#carouselCaptions" role="button" data-bs-slide="prev" title="Previous">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselCaptions" role="button" data-bs-slide="next" title="Next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </a>
 </div>
 
 <script src="static/js/carousel.js"></script>
+
+<style>
+    .carousel-image-wrapper {
+        width: 100%;
+        max-height: 500px; 
+        overflow: hidden; 
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .carousel-image {
+        width: auto;
+        height: 100%;
+        max-height: 500px; 
+        object-fit: cover; 
+    }
+</style>
