--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,6 @@ order: 1
             width: 80%;
             margin: auto;
             overflow: hidden;
-            background-color: #f4f4f9;
             padding: 20px 0;
         }
         .container h1 {
@@ -63,7 +62,6 @@ order: 1
 </head>
 <body>
     <div class="container">
-        <h1>My Projects</h1>
         <div class="project-section">
             <div class="project-card">
                 <h2 class="project-title">Project 1: Looped Videos</h2>
@@ -82,8 +80,8 @@ order: 1
             </div>
 
             <div class="project-card">
-                <h2 class="project-title">Project 3: TechCrunch Article Summarizer</h2>
-                <p class="project-description">Ever gotten tired or reading so many long articles? Simply imput a search term and watch this program scrape and summarize them for easier reading.</p>
+                <h2 class="project-title">Project 3: Article Summarizer</h2>
+                <p class="project-description">Ever gotten tired or reading so many long articles? Simply imput a search term and watch this program scrape and summarize TechCrunch articles for easier reading.</p>
                 <div class="project-links">
                     <a href="https://github.com/MichaelCrosson/TechCrunchScraper" class="project-link" target="_blank">GitHub</a>
                 </div>
