--- a/contact.html
+++ b/contact.html
@@ -8,12 +8,12 @@ order: 3
 <div class="row justify-content-center text-center">
     <div class="col-sm-6 col-lg-3 mb-4">
         <h3>Email</h3>
-        <a href="mailto:crosson.a.michael@gmail.com">crosson.a.michael@gmail.com</a>
+        <a href="mailto:crosson.a.michael@gmail.com">crosson.a.michael at gmail.com</a>
     </div>
 	<div>
-		
+
 	</div>
-    <div class="col-sm-6 col-lg-3 mb-4">
+    <div class="col-sm-6 col-lg-3 mb-4 justify-content-center">
         <h3>Socials</h3>
         {% include socials.html %}
     </div>
