--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@ layout: default
 title: Welcome
 ---
 
-<p class="text-center">Hello! Welcome to my website. Below are some pictures of cool things and fun times. Feel free to explore and I hope you enjoy your stay!
-</p>
+<p class="text-center">Hello! Welcome to my website. Below are some pictures of cool things and fun times. Feel free to explore and I hope you enjoy your stay!</p>
 
 <div id="carouselCaptions" class="carousel slide" data-bs-ride="carousel">
     <ol class="carousel-indicators">
@@ -54,5 +53,10 @@ title: Welcome
         height: 100%;
         max-height: 500px; 
         object-fit: cover; 
+    }
+
+    .carousel-caption h5, .carousel-caption p {
+        text-shadow: 2px 2px 0px #000, -2px -2px 0px #000, 2px -2px 0px #000, -2px 2px 0px #000; /* Black outline */
+        color: #fff; /* Ensures text color remains readable */
     }
 </style>
