--- a/index.html
+++ b/index.html
@@ -58,15 +58,14 @@ title: Welcome
         object-fit: cover; 
     }
 
-    /* Semi-transparent background for text readability */
     .caption-background {
-        background-color: rgba(0, 0, 0, 0.6); /* Black background with 60% opacity */
-        padding: 10px;
+        background-color: rgba(0, 0, 0, 0.5); 
+        padding: 8px;
         border-radius: 5px;
     }
 
     .carousel-caption h5, .carousel-caption p {
-        color: #fff; /* White text for contrast against the dark background */
+        color: #fff; 
         margin: 0;
     }
 </style>
