--- a/projects.html
+++ b/projects.html
@@ -73,7 +73,7 @@ order: 1
 
             <div class="project-card">
                 <h2 class="project-title">Project 2: Prompt Pilot</h2>
-                <p class="project-description">An interactive web app that teaches users how to prompt and interact with LLMs more efficiently with targeted feedback.</p>
+                <p class="project-description">An interactive web app that teaches users how to prompt and interact with LLMs more efficiently with targeted feedback and analytics dashboard. Still needs some work but feel free to give it a try!</p>
                 <div class="project-links">
                     <a href="https://microsoftcapstonetram.anvil.app/" class="project-link" target="_blank">Website</a>
                 </div>
