--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@ order: 3
 <script>
 function copyToClipboard(text) {
     navigator.clipboard.writeText(text).then(function() {
-        alert('Email address copied to clipboard');
+        alert('Email address copied to clipboard!');
     }, function(err) {
         console.error('Error copying text: ', err);
     });
