--- a/about.html
+++ b/about.html
@@ -8,45 +8,31 @@ order: 1
 <div class="col-lg-8 center">
 	<h3>Who</h3>
 	<p>
-		Hi, I'm Michael Crosson, a data science and business analytics enthusiast with a passion for creating impactful tools and improving processes. 
-		I’m currently pursuing my Master's in Business Analytics at The University of Texas at Austin, where I focus on developing AI and machine learning solutions to make a real-world difference. 
-		Over the past few years, I’ve had the opportunity to work with companies like Dell and Microsoft, applying my love for data to solve complex challenges. 
-		Outside of coding, you can find me tinkering with new technologies, playing board games, or dreaming up innovative ways to leave my mark on the tech world.
+		Hi, I'm Michael Crosson, a data science and business analytics enthusiast passionate about creating impactful tools and improving processes. I’m pursuing my Master's in Business Analytics at The University of Texas at Austin, where I focus on developing AI and machine learning solutions to make a real-world difference. Over the past few years, I’ve worked with companies like Dell and Microsoft, applying my love for data to solve complex challenges. Outside of coding, you can find me tinkering with new technologies, playing board games, or dreaming up innovative ways to leave my mark on the tech world.
 	</p>
 	
 	<h3>What</h3>
 	<p>
-		What do I do? I bridge the gap between data and decision-making, whether it’s creating a cooking database on Google Cloud or building machine learning models to help businesses optimize their operations. 
-		My toolkit includes Python, SQL, GCP, Tableau, and more, but at the core, I’m all about solving meaningful problems—whether for a client, a company, or a personal project that excites me. 
-		One of the projects I’m most proud of is Prompt Pilot, a web app learning platform designed to teach non-technical users how to improve their prompting skills when interacting with LLMs, providing targeted feedback to enhance their learning.
+		What do I do? I bridge the gap between data and decision-making, whether it’s creating a cooking database on Google Cloud or building machine learning models to help businesses optimize their operations. My toolkit includes Python, SQL, GCP, Tableau, and more, but at the core, I’m all about solving meaningful problems—whether for a client, a company, or a personal project that excites me. One of the projects I’m most proud of is Prompt Pilot, a web app learning platform designed to teach non-technical users how to improve their prompting skills when interacting with LLMs, providing targeted feedback to enhance their learning.
 	</p>
 	
 	<h3>When</h3>
 	<p>
-		My journey into data science and technology began early on, when I would experiment with coding languages like Scratch and robotics kits like Lego Mindstorms. 
-		These formative experiences paved the way for my academic career at UT Austin, where I majored in Business Analytics with a Computing Certificate. 
-		Fascinated by how data can tell a story, I sought out internships and projects that allowed me to put my skills into action. 
-		Although I officially completed my degree in May 2024, my learning journey began long before that—through internships at Dell, founding and leading the Business Analytics Association, and continuously exploring new technologies.
+		My journey into data science and technology began early on when I would experiment with coding languages like Scratch and robotics kits like Lego Mindstorms. These formative experiences paved the way for my academic career at UT Austin, where I majored in Business Analytics with a Computing Certificate. Fascinated by how data can tell a story, I sought out internships and projects that allowed me to put my skills into action. Although I officially completed my degree in May 2024, my learning journey began long before that—through internships at Dell, founding and leading the Business Analytics Association, and continuously exploring new technologies.
 	</p>
 	
 	<h3>Where</h3>
 	<p>
-		I grew up in Seattle, where I first developed my love for technology. I’ve spent time traveling between Seattle and Taiwan, visiting family and exploring the tech development landscape. 
-		For college, I moved across the country to Austin, where I’ve been able to carve out my space with the Business Analytics Association (BAXA). While Austin is my current home, I’ve also had the opportunity to travel to places I’ve always wanted to see, like Japan, New York, and California. 
-		With a global perspective, I’m conversational in Japanese and Mandarin, which helps me connect with diverse teams and cultures.
+		I grew up in Seattle, where I first developed my love for technology. I’ve spent time traveling between Seattle and Taiwan, visiting family, and exploring the tech development landscape. For college, I moved across the country to Austin, where I’ve been able to carve out my space with the Business Analytics Association (BAXA). While Austin is my current home, I’ve also had the opportunity to travel to places I’ve always wanted to see, like Japan, New York, and California. With a global perspective, I’m conversational in Japanese and Mandarin, which helps me connect with diverse teams and cultures.
 	</p>
 	
 	<h3>Why</h3>
 	<p>
-		I’m fueled by curiosity and the belief that with the right data and a bit of creativity, almost any problem can be solved. 
-		I thrive on tackling complex datasets or ambiguous problems and emerging with clear, actionable insights. Founding the Business Analytics Association (BAXA) at UT allowed me to share this passion with others. 
-		I believe data science should be both approachable and fun. One of my favorite moments was organizing "Escape McCombs," an escape-room style coding challenge that gave students a chance to showcase their skills in a fun and collaborative environment.
+		I’m fueled by curiosity and the belief that with the right data and a bit of creativity, almost any problem can be solved. I thrive on tackling complex datasets or ambiguous problems and emerging with clear, actionable insights. Founding the Business Analytics Association (BAXA) at UT allowed me to share this passion with others. I believe data science should be both approachable and fun. One of my favorite moments was organizing "Escape McCombs," an escape-room-style coding challenge that gave students a chance to showcase their skills in a fun and collaborative environment.
 	</p>
 	
 	<h3>How</h3>
 	<p>
-		How do I make things happen? Whether through leading initiatives like BAXA or collaborating on intricate projects, I approach each challenge with creativity and persistence. 
-		No problem is too complex. I love experimenting with new tools, optimizing workflows, and building solutions that are both effective and easy to use. 
-		I’m always learning and adapting—whether it’s mastering new coding frameworks or finding creative ways to solve old problems. I believe the best solutions come from combining technical expertise with a hands-on, problem-solving mindset.
+		How do I make things happen? Whether through leading initiatives like BAXA or collaborating on intricate projects, I approach each challenge with creativity and persistence. No problem is too complex. I love experimenting with new tools, optimizing workflows, and building solutions that are both effective and easy to use. I’m always learning and adapting—whether it’s mastering new coding frameworks or finding creative ways to solve old problems. I believe the best solutions come from combining technical expertise with a hands-on, problem-solving mindset.
 	</p>	
 </div>
