--- a/projects.html
+++ b/projects.html
@@ -64,10 +64,10 @@ order: 1
     <div class="container">
         <div class="project-section">
             <div class="project-card">
-                <h2 class="project-title">Project 1: Looped Videos</h2>
-                <p class="project-description">A Python-based looping program for youtube videos. Simply give it a youtube video and it will loop it to be 1 hour long! (One of my first projects)</p>
+                <h2 class="project-title">Project 1: Job Recommender System</h2>
+                <p class="project-description">Scrapes Indeed.com for company reviews and job postings and recommends jobs to apply for based on your resume and a blurb about what you want!</p>
                 <div class="project-links">
-                    <a href="https://github.com/MichaelCrosson/Loop-Youtube-Videos-for-1-hour" class="project-link" target="_blank">GitHub</a>
+                    <a href="https://github.com/MichaelCrosson/Indeed-Job-Recommender" class="project-link" target="_blank">GitHub</a>
                 </div>
             </div>
 
