--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,12 @@ order: 3
 	<div>
 	</div>
     <div class="col-sm-6 col-lg-3 mb-4 justify-content-center">
+	---
         <h3>Socials</h3>
         {% include socials.html %}
+	---
+	<h3>Want a copy of an AI Generated Newsletter?</h3>
+	    <a href="#" onclick="copyToClipboard('crosson.a.michael@gmail.com')">crosson.a.michael at gmail.com</a>
     </div>
 </div>
 
