--- a/contact.html
+++ b/contact.html
@@ -13,12 +13,8 @@ order: 3
 	<div>
 	</div>
     <div class="col-sm-6 col-lg-3 mb-4 justify-content-center">
-	---
-        <h3>Socials</h3>
-        {% include socials.html %}
-	---
 	<h3>Want a copy of an AI Generated Newsletter?</h3>
-	    <a href="#" onclick="copyToClipboard('crosson.a.michael@gmail.com')">crosson.a.michael at gmail.com</a>
+	    <a href="https://michaelcrosson.github.io/subscribe.html">Subscribe!</a>
     </div>
 </div>
 
@@ -29,45 +25,5 @@ function copyToClipboard(text) {
     }, function(err) {
         console.error('Error copying text: ', err);
     });
-}
-</script>
-<script>
-function subscribe(email) {
-    fetch('https://api.github.com/repos/MichaelCrosson/MichaelCrosson.github.io/actions/workflows/manage_subscribers.yml/dispatches', {
-        method: 'POST',
-        headers: {
-            'Authorization': 'Bearer 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',  // Use a token with repo access
-            'Accept': 'application/vnd.github.v3+json'
-        },
-        body: JSON.stringify({
-            ref: 'main',  // Branch where the workflow is defined
-            inputs: {
-                action: 'subscribe',
-                email: email
-            }
-        })
-    }).then(response => response.json())
-      .then(data => console.log('Subscription action triggered:', data))
-      .catch(error => console.error('Error:', error));
-}
-</script>
-<script>
-function unsubscribe(email) {
-    fetch('https://api.github.com/repos/<owner>/<repo>/actions/workflows/manage_subscribers.yml/dispatches', {
-        method: 'POST',
-        headers: {
-            'Authorization': 'Bearer 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',
-            'Accept': 'application/vnd.github.v3+json'
-        },
-        body: JSON.stringify({
-            ref: 'main',
-            inputs: {
-                action: 'unsubscribe',
-                email: email
-            }
-        })
-    }).then(response => response.json())
-      .then(data => console.log('Unsubscription action triggered:', data))
-      .catch(error => console.error('Error:', error));
 }
 </script>
