--- a/subscribe.html
+++ b/subscribe.html
@@ -118,10 +118,10 @@
                 return;
             }
             
-            fetch('https://api.github.com/repos/<owner>/<repo>/actions/workflows/manage_subscribers.yml/dispatches', {
+            fetch('https://api.github.com/repos/MichaelCrosson/MichaelCrosson.github.io/actions/workflows/manage_subscribers.yml/dispatches', {
                 method: 'POST',
                 headers: {
-                    'Authorization': 'Bearer <YOUR_GITHUB_TOKEN>',
+                    'Authorization': 'Bearer Bearer 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',
                     'Accept': 'application/vnd.github.v3+json',
                     'Content-Type': 'application/json'
                 },
@@ -157,10 +157,10 @@
                 return;
             }
             
-            fetch('https://api.github.com/repos/<owner>/<repo>/actions/workflows/manage_subscribers.yml/dispatches', {
+            fetch('https://api.github.com/repos/MichaelCrosson/MichaelCrosson.github.io/actions/workflows/manage_subscribers.yml/dispatches', {
                 method: 'POST',
                 headers: {
-                    'Authorization': 'Bearer <YOUR_GITHUB_TOKEN>',
+                    'Authorization': 'Bearer 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',
                     'Accept': 'application/vnd.github.v3+json',
                     'Content-Type': 'application/json'
                 },
