--- a/subscribe.html
+++ b/subscribe.html
@@ -121,7 +121,7 @@
             fetch('https://api.github.com/repos/MichaelCrosson/MichaelCrosson.github.io/actions/workflows/manage_subscribers.yml/dispatches', {
                 method: 'POST',
                 headers: {
-                    'Authorization': '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',
+                    'Authorization': 'Bearer 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',
                     'Accept': 'application/vnd.github.v3+json',
                     'Content-Type': 'application/json'
                 },
