--- a/subscribe.html
+++ b/subscribe.html
@@ -90,7 +90,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Subscribe to Daily News</h1>
+        <h1>Subscribe to AI-Summarized Daily Tech News</h1>
         
         <!-- Input for Email Address -->
         <label for="email">Enter your email:</label>
@@ -121,7 +121,6 @@
             fetch('https://api.github.com/repos/MichaelCrosson/MichaelCrosson.github.io/actions/workflows/manage_subscribers.yml/dispatches', {
                 method: 'POST',
                 headers: {
-                    'Authorization': 'Bearer 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',
                     'Accept': 'application/vnd.github.v3+json',
                     'Content-Type': 'application/json'
                 },
@@ -160,7 +159,6 @@
             fetch('https://api.github.com/repos/MichaelCrosson/MichaelCrosson.github.io/actions/workflows/manage_subscribers.yml/dispatches', {
                 method: 'POST',
                 headers: {
-                    'Authorization': 'Bearer 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',
                     'Accept': 'application/vnd.github.v3+json',
                     'Content-Type': 'application/json'
                 },
