--- a/subscribe.html
+++ b/subscribe.html
@@ -107,6 +107,8 @@
     </div>
 
     <script>
+        const GITHUB_TOKEN = 'Bearer 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'; // Securely replace with your GitHub token
+
         // Function to handle subscription
         function subscribe() {
             const email = document.getElementById('email').value;
@@ -123,6 +125,7 @@
             fetch('https://api.github.com/repos/MichaelCrosson/MichaelCrosson.github.io/actions/workflows/manage_subscribers.yml/dispatches', {
                 method: 'POST',
                 headers: {
+                    'Authorization': GITHUB_TOKEN,
                     'Accept': 'application/vnd.github.v3+json',
                     'Content-Type': 'application/json'
                 },
@@ -165,6 +168,7 @@
             fetch('https://api.github.com/repos/MichaelCrosson/MichaelCrosson.github.io/actions/workflows/manage_subscribers.yml/dispatches', {
                 method: 'POST',
                 headers: {
+                    'Authorization': GITHUB_TOKEN,
                     'Accept': 'application/vnd.github.v3+json',
                     'Content-Type': 'application/json'
                 },
