--- a/projects.html
+++ b/projects.html
@@ -64,7 +64,7 @@ order: 1
     <div class="container">
         <div class="project-section">
             <div class="project-card">
-                <h2 class="project-title">Project 1: Job Recommender System</h2>
+                <h2 class="project-title">Job Recommender System</h2>
                 <p class="project-description">Scrapes Indeed.com for company reviews and job postings and recommends jobs to apply for based on your resume and a blurb about what you want!</p>
                 <div class="project-links">
                     <a href="https://github.com/MichaelCrosson/Indeed-Job-Recommender" class="project-link" target="_blank">GitHub</a>
@@ -72,18 +72,19 @@ order: 1
             </div>
 
             <div class="project-card">
-                <h2 class="project-title">Project 2: Prompt Pilot</h2>
-                <p class="project-description">An interactive web app that teaches users how to prompt and interact with LLMs more efficiently with targeted feedback and analytics dashboard. Still needs some work but feel free to give it a try!</p>
+                <h2 class="project-title">Predicting Youtube Popularity</h2>
+                <p class="project-description">Ever wonder what makes a YouTube video popular? Use a custom CNN, LLama LLaVA, Wav2Vec, NMF, and more to find out!</p>
                 <div class="project-links">
-                    <a href="https://microsoftcapstonetram.anvil.app/" class="project-link" target="_blank">Website</a>
+                    <a href="https://medium.com/@crosson.a.michael/unveiling-youtube-success-decoding-the-formula-behind-popularity-0778406111dc" class="project-link" target="_blank">Paper</a>
+                    <a href="https://github.com/MichaelCrosson/YoutubeVideoAnalysis" class="project-link" target="_blank">GitHub</a>
                 </div>
             </div>
 
             <div class="project-card">
-                <h2 class="project-title">Project 3: Article Summarizer</h2>
-                <p class="project-description">Ever gotten tired or reading so many long articles? Simply imput a search term and watch this program scrape and summarize TechCrunch articles for easier reading.</p>
+                <h2 class="project-title">Prompt Pilot</h2>
+                <p class="project-description">An interactive web app that teaches users how to prompt and interact with LLMs more efficiently with targeted feedback and an analytics dashboard. Still needs some work but feel free to give it a try!</p>
                 <div class="project-links">
-                    <a href="https://github.com/MichaelCrosson/TechCrunchScraper" class="project-link" target="_blank">GitHub</a>
+                    <a href="https://microsoftcapstonetram.anvil.app/" class="project-link" target="_blank">Website</a>
                 </div>
             </div>
         </div>
