--- a/projects.html
+++ b/projects.html
@@ -73,7 +73,7 @@ order: 1
 
             <div class="project-card">
                 <h2 class="project-title">Predicting Youtube Popularity</h2>
-                <p class="project-description">Ever wonder what makes a YouTube video popular? Use a custom CNN, LLama LLaVA, Wav2Vec, NMF, and more to find out!</p>
+                <p class="project-description">Ever wonder what makes a YouTube video popular? Use LLama LLaVA, a CNN, Wav2Vec, NMF, and more to find out what generates views and clicks!</p>
                 <div class="project-links">
                     <a href="https://medium.com/@crosson.a.michael/unveiling-youtube-success-decoding-the-formula-behind-popularity-0778406111dc" class="project-link" target="_blank">Paper</a>
                     <a href="https://github.com/MichaelCrosson/YoutubeVideoAnalysis" class="project-link" target="_blank">GitHub</a>
